test/errors/types/ref_return_local_fail.hy
ref int getRefToLocal()
{
    int local = 42
    return ref local
}
